docs: fix minor layout issues and allow expanding nav sections

--- a/src/docs/components/docs-nav/docs-nav.css
+++ b/src/docs/components/docs-nav/docs-nav.css
@@ -194,7 +194,6 @@
   }
 
   a {
-    display: block;
     padding-left: var(--ld-sp-40);
 
     &::after {
@@ -208,6 +207,7 @@
       display: inline-flex;
       align-items: center;
       justify-content: center;
+      pointer-events: none;
     }
 
     &::before {
